[package]
name = "hermes"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
suppaftp = "4.7.0"
anyhow = "1.0.58"
clap = { version = "3.2.25", features = ["std", "derive"], default-features = false }
